# INSITE

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt  supabase_auth_function.sql  supabase_metrics.sql  supabase_setup.sql  vercel.json
api/: debug.py  index.py  test.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_data.py  seed_lite.py
backend/alembic/: env.py
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: ai_diagnosis.py  alerts.py  assets.py  audit.py  auth.py  dashboard.py  logs.py  metrics.py  reports.py
backend/app/core/: auth.py  permissions.py  security.py
backend/app/models/: __init__.py  alert.py  asset.py  audit_log.py  log_entry.py  metric.py  user.py
backend/app/schemas/: __init__.py  ai_diagnosis.py  alert.py  asset.py  audit_log.py  dashboard.py  log_entry.py  metric.py  report.py  user.py
backend/app/services/: ai_engine.py  alert_engine.py  notification.py  report_engine.py
backend/app/services/collector/: heartbeat.py  prometheus_collector.py  snmp_collector.py  syslog_collector.py
backend/app/utils/: compat.py
collector/: Dockerfile  agent.py  config.yaml  requirements.txt
frontend/: .env.development  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/data/: demo.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/routes/: AIPage.tsx  AlertsPage.tsx  (+6 more)
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
(+14 files in other folders)
