[project]
name = "insite-backend"
version = "0.1.0"
description = "INSITE - IT Infrastructure Integrated Monitoring System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
    "elasticsearch[async]>=8.12.0",
    "httpx>=0.26.0",
    "aiosmtplib>=3.0.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "weasyprint>=61.0",
    "openpyxl>=3.1.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "pysnmp>=6.1.0",
    "prometheus-client>=0.20.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
